--- a/templates/adminpages/adminbase.html
+++ b/templates/adminpages/adminbase.html
@@ -61,12 +61,25 @@
         #content {
             width: 100%;
             padding: 20px;
+            padding: 0;
             min-height: 100vh;
             transition: all 0.3s;
         }
         .card {
             border-radius: 8px;
             border: none;
+        }
+        
+        .content-wrapper {
+            padding: 20px;
+        }
+        #sidebar ul li a {
+            padding: 12px 20px; /* Increased padding slightly */
+            font-size: 1rem;
+        }
+        #sidebar ul li a i {
+            width: 20px; /* Align icons */
+            text-align: center;
         }
     </style>
 </head>
@@ -92,14 +105,14 @@
             <li>
                 <a href="{% url 'ecomapp:admincategorylist' %}"><i class="fas fa-box me-2"></i>All Categories</a>
             </li>
-             <li>
-                <a href="{% url 'ecomapp:customerlogout' %}"><i class="fas fa-sign-out-alt me-2"></i>Logout</a>
-            </li>
         </ul>
     </nav>
 
     <div id="content">
-        {% block content %}{% endblock %}
+        
+        <div class="content-wrapper">
+            {% block content %}{% endblock %}
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
